; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/coda/extr_cnode.c_coda_cnode_makectl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/coda/extr_cnode.c_coda_cnode_makectl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32, i32*, i32*, i32 }
%struct.super_block = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@CTL_INO = common dso_local global i32 0, align 4
@coda_ioctl_inode_operations = common dso_local global i32 0, align 4
@coda_ioctl_operations = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @coda_cnode_makectl(%struct.inode** %0, %struct.super_block* %1) #0 {
  %3 = alloca %struct.inode**, align 8
  %4 = alloca %struct.super_block*, align 8
  %5 = alloca i32, align 4
  store %struct.inode** %0, %struct.inode*** %3, align 8
  store %struct.super_block* %1, %struct.super_block** %4, align 8
  %6 = load i32, i32* @ENOMEM, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %5, align 4
  %8 = load %struct.super_block*, %struct.super_block** %4, align 8
  %9 = call %struct.inode* @new_inode(%struct.super_block* %8)
  %10 = load %struct.inode**, %struct.inode*** %3, align 8
  store %struct.inode* %9, %struct.inode** %10, align 8
  %11 = load %struct.inode**, %struct.inode*** %3, align 8
  %12 = load %struct.inode*, %struct.inode** %11, align 8
  %13 = icmp ne %struct.inode* %12, null
  br i1 %13, label %14, label %28

14:                                               ; preds = %2
  %15 = load i32, i32* @CTL_INO, align 4
  %16 = load %struct.inode**, %struct.inode*** %3, align 8
  %17 = load %struct.inode*, %struct.inode** %16, align 8
  %18 = getelementptr inbounds %struct.inode, %struct.inode* %17, i32 0, i32 3
  store i32 %15, i32* %18, align 8
  %19 = load %struct.inode**, %struct.inode*** %3, align 8
  %20 = load %struct.inode*, %struct.inode** %19, align 8
  %21 = getelementptr inbounds %struct.inode, %struct.inode* %20, i32 0, i32 2
  store i32* @coda_ioctl_inode_operations, i32** %21, align 8
  %22 = load %struct.inode**, %struct.inode*** %3, align 8
  %23 = load %struct.inode*, %struct.inode** %22, align 8
  %24 = getelementptr inbounds %struct.inode, %struct.inode* %23, i32 0, i32 1
  store i32* @coda_ioctl_operations, i32** %24, align 8
  %25 = load %struct.inode**, %struct.inode*** %3, align 8
  %26 = load %struct.inode*, %struct.inode** %25, align 8
  %27 = getelementptr inbounds %struct.inode, %struct.inode* %26, i32 0, i32 0
  store i32 292, i32* %27, align 8
  store i32 0, i32* %5, align 4
  br label %28

28:                                               ; preds = %14, %2
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local %struct.inode* @new_inode(%struct.super_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
